fixed selected avg, added delays for loadAll
--sometimes not all results were loaded, so a 50ms delay was added in
between each ajax call
--selected div was not showing sum instead of average

--- a/styles/style.less
+++ b/styles/style.less
@@ -87,7 +87,10 @@ td,th {
 }
 
 #selectedData {
-	float: right;
+	position: fixed;
+	right:0;
+	background-color: white;
+	background-color: rgba(255,255,255,.7);
 	border: 1px blue solid;
 	border-radius: 4px;
 /*	background: blue;
